--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,177 +1,219 @@
-<div class="row carousel-holder">
+<div class="row">
+    <div class="row col-lg-6 col-md-6 col-sm-8 col-xs-12">
+        <a href="javascript:void(0)" class="button">
+            <h5 data-toggle="collapse" data-target="#HighestPrice">
+                Giá cao nhất
+                <div class="glyphicon glyphicon-menu-down"></div>
+            </h5>
 
-    <div class="col-md-12">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        </a>
+        <div id="HighestPrice" class="collapse in carousel slide" data-ride="carousel">
+            <!-- Indicators -->
             <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                <li data-target="#HighestPrice" data-slide-to="0" class="active"></li>
+                <li data-target="#HighestPrice" data-slide-to="1"></li>
+                <li data-target="#HighestPrice" data-slide-to="2"></li>
+                <li data-target="#HighestPrice" data-slide-to="3"></li>
+                <li data-target="#HighestPrice" data-slide-to="4"></li>
             </ol>
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img class="slide-image" src="/images/0000000000.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img class="slide-image" src="/images/0000000001.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img class="slide-image" src="/images/0000000002.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img class="slide-image" src="/images/0000000003.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img class="slide-image" src="/images/0000000004.jpg" alt="">
-                </div>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" style=" width:100%; height: 100% !important;">
+                <% products_HighestPrice.forEach(function(product, index){ %>
+                    <% if (index == 0) { %>
+                        <div class="item active">
+                            <img src=<%=product.image1%> alt="Los Angeles" style="width:100%;">
+                            <div class="carousel-caption">
+                                <h5>Tên sản phẩm:
+                                    <%=product.name%>
+                                </h5>
+                                <h5>Giá hiện tại:
+                                    <%=product.curPrice%>
+                                </h5>
+                                <h5>Giá mua ngay:
+                                    <%=product.immediatePrice%>
+                                </h5>
+                            </div>
+                        </div>
+                        <% } %>
+                            <% if (index != 0) { %>
+                                <div class="item">
+                                    <img src=<%=product.image1%> alt="Los Angeles" style="width:100%;">
+                                    <div class="carousel-caption">
+                                        <h5>Tên sản phẩm:
+                                            <%=product.name%>
+                                        </h5>
+                                        <h5>Giá hiện tại:
+                                            <%=product.curPrice%>
+                                        </h5>
+                                        <h5>Giá mua ngay:
+                                            <%=product.immediatePrice%>
+                                        </h5>
+                                    </div>
+                                </div>
+                                <% } %>
+
+                                    <% }); %>
+
+
             </div>
-            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#HighestPrice" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+            <a class="right carousel-control" href="#HighestPrice" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
             </a>
         </div>
     </div>
 
+    <div class="row col-lg-1 col-md-1 col-sm-0 col-xs-0">
+    </div>
+
+    <div class="row col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <a href="javascript:void(0)" class="button">
+            <h5 data-toggle="collapse" data-target="#MostBidded">
+                Nhiều lần ra giá nhất
+                <div class="glyphicon glyphicon-menu-down"></div>
+            </h5>
+
+        </a>
+        <div id="MostBidded" class="collapse in carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#MostBidded" data-slide-to="0" class="active"></li>
+                <li data-target="#MostBidded" data-slide-to="1"></li>
+                <li data-target="#MostBidded" data-slide-to="2"></li>
+                <li data-target="#MostBidded" data-slide-to="3"></li>
+                <li data-target="#MostBidded" data-slide-to="4"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" style=" width:100%; height: 100% !important;">
+                <% products_MostBidded.forEach(function(product, index){ %>
+                    <% if (index == 0) { %>
+                        <div class="item active">
+                            <img src=<%=product.image1%> alt="Los Angeles" style="width:100%;">
+                            <div class="carousel-caption">
+                                <h5>Tên sản phẩm:
+                                    <%=product.name%>
+                                </h5>
+                                <h5>Giá hiện tại:
+                                    <%=product.curPrice%>
+                                </h5>
+                                <h5>Giá mua ngay:
+                                    <%=product.immediatePrice%>
+                                </h5>
+                            </div>
+                        </div>
+                        <% } %>
+                            <% if (index != 0) { %>
+                                <div class="item">
+                                    <img src=<%=product.image1%> alt="Los Angeles" style="width:100%;">
+                                    <div class="carousel-caption">
+                                        <h5>Tên sản phẩm:
+                                            <%=product.name%>
+                                        </h5>
+                                        <h5>Giá hiện tại:
+                                            <%=product.curPrice%>
+                                        </h5>
+                                        <h5>Giá mua ngay:
+                                            <%=product.immediatePrice%>
+                                        </h5>
+                                    </div>
+                                </div>
+                                <% } %>
+
+                                    <% }); %>
+
+
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#MostBidded" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#MostBidded" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
 </div>
 
 <div class="row">
+    <div class="row col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <a href="javascript:void(0)" class="button">
+            <h5 data-toggle="collapse" data-target="#AlmostExpired">
+                Sắp hết hạn đấu giá
+                <div class="glyphicon glyphicon-menu-down"></div>
+            </h5>
 
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="http://placehold.it/320x150" alt="">
-            <div class="caption">
-                <h4 class="pull-right">$24.99</h4>
-                <h4><a href="#">First Product</a>
-                </h4>
-                <p>See more snippets like this online store item at <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp - http://bootsnipp.com</a>.</p>
+        </a>
+        <div id="AlmostExpired" class="collapse in carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#AlmostExpired" data-slide-to="0" class="active"></li>
+                <li data-target="#AlmostExpired" data-slide-to="1"></li>
+                <li data-target="#AlmostExpired" data-slide-to="2"></li>
+                <li data-target="#AlmostExpired" data-slide-to="3"></li>
+                <li data-target="#AlmostExpired" data-slide-to="4"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" style=" width:100%; height: 100% !important;">
+                <% products_AlmostExpired.forEach(function(product, index){ %>
+                    <% if (index == 0) { %>
+                        <div class="item active">
+                            <img src=<%=product.image1%> alt="Los Angeles" style="width:100%;">
+                            <div class="carousel-caption">
+                                <h5>Tên sản phẩm:
+                                    <%=product.name%>
+                                </h5>
+                                <h5>Giá hiện tại:
+                                    <%=product.curPrice%>
+                                </h5>
+                                <h5>Giá mua ngay:
+                                    <%=product.immediatePrice%>
+                                </h5>
+                            </div>
+                        </div>
+                        <% } %>
+                            <% if (index != 0) { %>
+                                <div class="item">
+                                    <img src=<%=product.image1%> alt="Los Angeles" style="width:100%;">
+                                    <div class="carousel-caption">
+                                        <h5>Tên sản phẩm:
+                                            <%=product.name%>
+                                        </h5>
+                                        <h5>Giá hiện tại:
+                                            <%=product.curPrice%>
+                                        </h5>
+                                        <h5>Giá mua ngay:
+                                            <%=product.immediatePrice%>
+                                        </h5>
+                                    </div>
+                                </div>
+                                <% } %>
+
+                                    <% }); %>
+
+
             </div>
-            <div class="ratings">
-                <p class="pull-right">15 reviews</p>
-                <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                </p>
-            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#AlmostExpired" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#AlmostExpired" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
-
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="http://placehold.it/320x150" alt="">
-            <div class="caption">
-                <h4 class="pull-right">$64.99</h4>
-                <h4><a href="#">Second Product</a>
-                </h4>
-                <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="ratings">
-                <p class="pull-right">12 reviews</p>
-                <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="http://placehold.it/320x150" alt="">
-            <div class="caption">
-                <h4 class="pull-right">$74.99</h4>
-                <h4><a href="#">Third Product</a>
-                </h4>
-                <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="ratings">
-                <p class="pull-right">31 reviews</p>
-                <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="http://placehold.it/320x150" alt="">
-            <div class="caption">
-                <h4 class="pull-right">$84.99</h4>
-                <h4><a href="#">Fourth Product</a>
-                </h4>
-                <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="ratings">
-                <p class="pull-right">6 reviews</p>
-                <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="http://placehold.it/320x150" alt="">
-            <div class="caption">
-                <h4 class="pull-right">$94.99</h4>
-                <h4><a href="#">Fifth Product</a>
-                </h4>
-                <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="ratings">
-                <p class="pull-right">18 reviews</p>
-                <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <h4><a href="#">Like this template?</a>
-        </h4>
-        <p>If you like this template, then check out <a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">this tutorial</a> on how to build a working review system for your online store!</p>
-        <a class="btn btn-primary" target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">View Tutorial</a>
-    </div>
-    <div class="R" style="background-color: gray">
-      <% products_HighestPrice.forEach(function(product){  %>
-        <h2><%= product.name %></h2>
-      <% }); %>
-    </div>
-
-    <div class="" style="background-color: green">
-      <% products_FiveMostTimeBidding.forEach(function(product){  %>
-        <h2><%= product.name %></h2>
-      <% }); %>
-    </div>
-
-    <div class="" style="background-color: brown">
-      <% products_FiveNearest.forEach(function(product){  %>
-        <h2><%= product.name %></h2>
-      <% }); %>
-    </div>
-
-
 </div>
