--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,17 +3,17 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- Viewport mobile tag for sensible mobile support -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Viewport mobile tag for sensible mobile support -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>
-    <%=typeof title == 'undefined' ? 'New Sails App' : title%>
-  </title>
-  <!--
+    <title>
+        <%=typeof title == 'undefined' ? 'New Sails App' : title%>
+    </title>
+    <!--
         Stylesheets and Preprocessors
         ==============================
 
@@ -34,94 +34,97 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
 
-  <!--STYLES-->
-  <link rel="stylesheet" href="/styles/importer.css">
-  <link rel="stylesheet" href="/styles/layout.css">
-  <!--STYLES END-->
+    <!--STYLES-->
+    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/layout.css">
+    <!--STYLES END-->
 
-  <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css">
 </head>
 
 <body>
 
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <p class="pull-left visible-xs">
-          <button id="offcanvasleft" class="btn btn-xs" type="button" data-toggle="offcanvasleft"><i class="glyphicon glyphicon-chevron-left"></i></button>
-        </p>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <p class="pull-left visible-xs">
+                    <button id="offcanvasleft" class="btn btn-xs" type="button" data-toggle="offcanvasleft"><i class="glyphicon glyphicon-chevron-left"></i></button>
+                </p>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <form class="navbar-form navbar-right">
-          <input type="text" class="form-control" placeholder="Search..." size="60" style="float:left;">
-        </form>
-        <a class="navbar-brand" href="#">Braveurself</a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav" style="float:right;">
-          <li>
-            <a href="#">Product</a>
-          </li>
-          <li>
-            <a href="#">Community</a>
-          </li>
-        </ul>
+                <a class="navbar-brand" href="#">Braveurself</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <form class="navbar-form navbar-right">
+                            <input type="text" class="form-control" placeholder="Search..." size="50">
+                        </form>
+                    </li>
 
-      </div>
-      <!-- /.navbar-collapse -->
+                    <li>
+                        <a href="#">Sản phẩm</a>
+                    </li>
+                    <li>
+                        <a href="#">Cộng đồng</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container-fluid">
+
+        <div class="row row-offcanvas row-offcanvas-left">
+            <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebarLeft" role="navigation">
+                <ul class="nav nav-sidebar">
+                    <li><a href=""><span>Tin nhắn</span><span class="glyphicon glyphicon-envelope" style=" float: right;"></span></a></li>
+                    <li><a href=""><span>Cài đặt</span><span class="glyphicon glyphicon-cog" style=" float: right;"></span></a></li>
+                    <li><a href="login"><span>Đăng nhập</span><span class="glyphicon glyphicon-log-in" style=" float: right;"></span></a></li>
+                    <li><a href="logout"><span>Đăng xuất</span><span class="glyphicon glyphicon-log-out" style=" float: right;"></span></a></li>
+                    <li><a href="register"><span>Đăng kí</span><span class="glyphicon glyphicon-registration-mark" style=" float: right;"></span></a></li>
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <div class="row">
+                    <%-body%>
+                </div>
+            </div>
+            <!--/span-->
+        </div>
+
     </div>
     <!-- /.container -->
-  </nav>
 
-  <!-- Page Content -->
-  <div class="container-fluid">
+    <div class="container-fluid">
 
-    <div class="row row-offcanvas row-offcanvas-left">
-      <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebarLeft" role="navigation">
-        <ul class="nav nav-sidebar">
-          <li><a href=""><span>Message</span><span class="glyphicon glyphicon-envelope" style=" float: right;"></span></a></li>
-          <li><a href=""><span>Setting</span><span class="glyphicon glyphicon-cog" style=" float: right;"></span></a></li>
-          <li><a href="login"><span>Login</span><span class="glyphicon glyphicon-log-in" style=" float: right;"></span></a></li>
-          <li><a href="logout"><span>Logout</span><span class="glyphicon glyphicon-log-out" style=" float: right;"></span></a></li>
-          <li><a href="register"><span>Register</span><span class="glyphicon glyphicon-registration-mark" style=" float: right;"></span></a></li>
-        </ul>
-      </div>
-      <div class="col-xs-12 col-sm-9">
-        <div class="row">
-          <%-body%>
-        </div>
-      </div>
-      <!--/span-->
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+        </footer>
+
     </div>
+    <!-- /.container -->
 
-  </div>
-  <!-- /.container -->
-
-  <div class="container-fluid">
-
-    <hr>
-
-    <!-- Footer -->
-    <footer>
-      <div class="row">
-        <div class="col-lg-12">
-          <p>Copyright &copy; Your Website 2014</p>
-        </div>
-      </div>
-    </footer>
-
-  </div>
-  <!-- /.container -->
-
-  <!--
+    <!--
         Client-side Templates
         ========================
 
@@ -142,12 +145,12 @@
               stringfile before they're served.
     -->
 
-  <!--TEMPLATES-->
-  
-  <!--TEMPLATES END-->
+    <!--TEMPLATES-->
+
+    <!--TEMPLATES END-->
 
 
-  <!--
+    <!--
 
       Client-side Javascript
       ========================
@@ -168,12 +171,12 @@
           + Use a different preprocessor, like TypeScript
 
     -->
-  <script src="/components/jquery/dist/jquery.js"></script>
-  <script src="/components/bootstrap/dist/js/bootstrap.js"></script>
-  <!--SCRIPTS-->
-  <script src="/js/dependencies/sails.io.js"></script>
-  <script src="/js/LeftMenu.js"></script>
-  <!--SCRIPTS END-->
+    <script src="/components/jquery/dist/jquery.js"></script>
+    <script src="/components/bootstrap/dist/js/bootstrap.js"></script>
+    <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/LeftMenu.js"></script>
+    <!--SCRIPTS END-->
 
 </body>
 
